fixed scrollbar for navya

--- a/components/dropdown/dropdown.component.less
+++ b/components/dropdown/dropdown.component.less
@@ -53,13 +53,12 @@
       }
 
       &-scroller {
-        width: 5px;
         border-radius: 5px;
         //background: @textEmphasisGrey;
       }
 
       &.showScroll::after {
-        display: none;
+        right: 2px;
       }
     }
 
